PairExplorer: fix transactions table layout on mobile

--- a/src/pages/PairExplorer/RightAsideBar/RightAsideBar.module.scss
+++ b/src/pages/PairExplorer/RightAsideBar/RightAsideBar.module.scss
@@ -5,7 +5,7 @@
 .table_header {
   position: relative;
   background-color: #201346;
-  padding: 0 10px;
+  padding: 0 13px 0 10px;
   height: 33px;
   display: flex;
   align-items: center;
@@ -110,6 +110,19 @@
       }
     }
   }
+}
+
+.amount {
+  min-width: 144px;
+}
+
+.usd {
+  min-width: 82px;
+}
+
+.time {
+  min-width: 42px;
+  margin-left: 10px;
 }
 
 .zero_trades {
